@@ -79,8 +79,8 @@ def _div_round_up(a, b):
     return (a // b) if (a % b) == 0 else (a // b) + 1
 
 
-def raster_get_stats(
-    src_path,
+def _raster_get_stats(
+    src_dst,
     indexes=None,
     nodata=None,
     overview_level=None,
@@ -96,8 +96,8 @@ def raster_get_stats(
 
     Attributes
     ----------
-    src_path : str or PathLike object
-        A dataset path or URL. Will be opened in "r" mode.
+    src_dst : rasterio.io.DatasetReader
+        rasterio.io.DatasetReader object
     indexes : tuple, list, int, optional
         Dataset band indexes.
     nodata, int, optional
@@ -151,82 +151,82 @@ def raster_get_stats(
                 4: {...}
             }
         }
+
     """
     if isinstance(indexes, int):
         indexes = [indexes]
     elif isinstance(indexes, tuple):
         indexes = list(indexes)
 
-    with rasterio.open(src_path) as src_dst:
-        levels = src_dst.overviews(1)
-        width = src_dst.width
-        height = src_dst.height
-        indexes = indexes if indexes else src_dst.indexes
-        nodata = nodata if nodata is not None else src_dst.nodata
-        bounds = transform_bounds(
-            *[src_dst.crs, dst_crs] + list(src_dst.bounds), densify_pts=21
-        )
+    levels = src_dst.overviews(1)
+    width = src_dst.width
+    height = src_dst.height
+    indexes = indexes if indexes else src_dst.indexes
+    nodata = nodata if nodata is not None else src_dst.nodata
+    bounds = transform_bounds(
+        *[src_dst.crs, dst_crs] + list(src_dst.bounds), densify_pts=21
+    )
 
-        minzoom, maxzoom = get_zooms(src_dst)
+    minzoom, maxzoom = get_zooms(src_dst)
 
-        def _get_descr(ix):
-            """Return band description."""
-            name = src_dst.descriptions[ix - 1]
-            if not name:
-                name = "band{}".format(ix)
-            return name
+    def _get_descr(ix):
+        """Return band description."""
+        name = src_dst.descriptions[ix - 1]
+        if not name:
+            name = "band{}".format(ix)
+        return name
 
-        band_descriptions = [(ix, _get_descr(ix)) for ix in indexes]
+    band_descriptions = [(ix, _get_descr(ix)) for ix in indexes]
 
-        if len(levels):
-            if overview_level:
-                decim = levels[overview_level]
-            else:
-                # determine which zoom level to read
-                for ii, decim in enumerate(levels):
-                    if (
-                        max(_div_round_up(width, decim), _div_round_up(height, decim))
-                        < max_size
-                    ):
-                        break
+    if len(levels):
+        if overview_level:
+            decim = levels[overview_level]
         else:
-            decim = 1
-            warnings.warn(
-                "Dataset has no overviews, reading the full dataset", NoOverviewWarning
-            )
-
-        out_shape = (
-            len(indexes),
-            _div_round_up(height, decim),
-            _div_round_up(width, decim),
+            # determine which zoom level to read
+            for ii, decim in enumerate(levels):
+                if (
+                    max(_div_round_up(width, decim), _div_round_up(height, decim))
+                    < max_size
+                ):
+                    break
+    else:
+        decim = 1
+        warnings.warn(
+            "Dataset has no overviews, reading the full dataset", NoOverviewWarning
         )
 
-        vrt_params = dict(add_alpha=True)
-        if has_alpha_band(src_dst):
-            vrt_params.update(dict(add_alpha=False))
+    out_shape = (
+        len(indexes),
+        _div_round_up(height, decim),
+        _div_round_up(width, decim),
+    )
 
-        if nodata is not None:
-            vrt_params.update(dict(nodata=nodata, add_alpha=False, src_nodata=nodata))
+    vrt_params = dict(add_alpha=True)
+    if has_alpha_band(src_dst):
+        vrt_params.update(dict(add_alpha=False))
 
-        with WarpedVRT(src_dst, **vrt_params) as vrt:
-            arr = vrt.read(
-                out_shape=out_shape,
-                indexes=indexes,
-                resampling=Resampling[resampling_method],
-                masked=True,
-            )
+    if nodata is not None:
+        vrt_params.update(dict(nodata=nodata, add_alpha=False, src_nodata=nodata))
 
-            params = {}
-            if histogram_bins:
-                params.update(dict(bins=histogram_bins))
-            if histogram_range:
-                params.update(dict(range=histogram_range))
+    with WarpedVRT(src_dst, **vrt_params) as vrt:
+        arr = vrt.read(
+            out_shape=out_shape,
+            indexes=indexes,
+            resampling=Resampling[resampling_method],
+            masked=True,
+        )
 
-            stats = {
-                indexes[b]: _stats(arr[b], percentiles=percentiles, **params)
-                for b in range(arr.shape[0])
-                if vrt.colorinterp[b] != ColorInterp.alpha
-            }
+        params = {}
+        if histogram_bins:
+            params.update(dict(bins=histogram_bins))
+        if histogram_range:
+            params.update(dict(range=histogram_range))
+
+        stats = {
+            indexes[b]: _stats(arr[b], percentiles=percentiles, **params)
+            for b in range(arr.shape[0])
+            if vrt.colorinterp[b] != ColorInterp.alpha
+        }
 
     return {
         "bounds": {
@@ -238,6 +238,30 @@ def raster_get_stats(
         "band_descriptions": band_descriptions,
         "statistics": stats,
     }
+
+
+def raster_get_stats(source, **kwargs):
+    """
+    Read data and mask.
+
+    Attributes
+    ----------
+    source : str or rasterio.io.DatasetReader
+        input file path or rasterio.io.DatasetReader object
+    kwargs: dict, optional
+        These will be passed to the _raster_get_stats function.
+
+    Returns
+    -------
+    out : array, int
+        returns pixel value.
+
+    """
+    if isinstance(source, DatasetReader):
+        return _raster_get_stats(source, **kwargs)
+    else:
+        with rasterio.open(source) as src_dst:
+            return _raster_get_stats(src_dst, **kwargs)
 
 
 def get_vrt_transform(
