@@ -1,3 +1,7 @@
+NEXT (TBD)
+----------
+
+- Allow `DatasetReader` input for `utils.raster_get_stats`
 
 1.2.11 (2019-09-18)
 -------------------
